--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>l</title>
+        <title>Widget</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="root">
         </div>
+        <script type="text/javascript" src="../setting.js"></script>
     </body>
 </html>
